# spotify-downloader-gui

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  Tauri.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: cargo_fmt.yml
assets/icons/: icon.icns
interface/: .prettierrc  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
interface/src/: app.css  app.d.ts  store.ts
interface/src/lib/components/window/: TitleBar.svelte
interface/src/lib/components/window/dialogs/: About.svelte
interface/src/lib/components/window/main/: Bottom.svelte  Main.svelte  Nav.svelte
interface/src/lib/components/window/titlebar/: Menu.svelte  TitleBar.svelte
interface/src/lib/utils/: local-storage.ts
interface/src/routes/: +layout.svelte
interface/static/: about.html
src/: config.rs  constants.rs  main.rs  utils.rs
src/app/: about.rs  generic.rs  menu.rs  mod.rs  setup.rs  window.rs
